# ForensicTool

./: README.md  build_test_images.py  pyproject.toml  report.json  test.img
forensic_tool/: __init__.py  __main__.py  audit.py  cli.py  hexdump.py  image.py  partition.py  report.py
