[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-tool"
version = "0.1.0"
description = "Read-only forensic disk image analyzer"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
forensic = "forensic_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forensic_tool*"]
